syntax = "proto3";

option java_multiple_files = true;
option java_outer_classname = "Hotel";

package com.hotel.proto;

message HotelsList {
    repeated HotelDetails hotel = 1;
}

message HotelDetails{
    int64 hotelId = 1;
    string hotelName = 2;
    string hotelDescription = 3;
    string chainCode = 4;
    int64 starRating = 5;
    Address address = 6;
    Coordinates coordinates = 7;
    repeated Amenity amenities = 8;
}

message Address {
    string streetAddress = 1;
    string city = 2;
    string state = 3;
    string stateCode = 4;
    string country = 5;
    string countryCode = 6;
    string zipCode = 7;
}

message Coordinates {
    double latitude = 1;
    double longitude = 2;
}

enum Amenity {
    WIFI = 0;
    HIGH_SPEED_INTERNET = 1;
    POOL = 2;
    HOT_TUB = 3;
    JACUZZI = 4;
    RESTAURANT = 5;
    FITNESS_CENTER = 6;
    LAUNDRY = 7;
    ROOM_SERVICE = 8;
    CASINO = 9;
    FREE_PARKING = 10;
    SPA = 11;
    PET_FRIENDLY = 12;
    AIR_CONDITIONING = 13;
    COFFEE_SHOP = 14;
    HEATED_POOL = 15;
    MASSAGE = 16;
    NIGHTCLUB = 17;
    CONCIERGE = 18;
    DRY_CLEANING = 19;
}